# petfinder-py-sdk

./: .flake8  LICENSE  README.md  pyproject.toml
petfinder/: __init__.py  client.py  errors.py
petfinder/endpoints/: animal.py  organization.py
